tests/ui/issues/issue-19244-2.stderr
error[E0609]: no field `nonexistent_field` on type `MyStruct`
  --> $DIR/issue-19244-2.rs:5:27
   |
LL |     let a: [isize; STRUCT.nonexistent_field];
   |                           ^^^^^^^^^^^^^^^^^ unknown field
   |
   = note: available field is: `field`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0609`.
